Update and rename holder.fxml to MAIN_CONTROLLER.fxml

--- a/src/game/characters/res/menu/MAIN_CONTROLLER.fxml
+++ b/src/game/characters/res/menu/MAIN_CONTROLLER.fxml
@@ -3,6 +3,6 @@
 
 <VBox prefHeight="200.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml" fx:controller="game.MainController">
     <children>
-        <StackPane fx:id="vistaHolder" VBox.vgrow="ALWAYS" />
+        <StackPane fx:id="mainController" VBox.vgrow="ALWAYS" />
     </children>
 </VBox>
